<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwiftSMS</string>
    <string name="type_message">Type message</string>
    <string name="to">To</string>
    <string name="action_add_account">Add Account</string>
    <string name="hint_add_account_login_help">Enter your Web Text login details.</string>
    <string name="hint_mob_number">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_acc_name_opt">Account name (optional)</string>
    <string name="text_add_operator">Add Account</string>
    <string name="active_acc">Active Account</string>
    <string name="action_manage_account">Manage Accounts</string>
    <string name="contact_photo">Contact photo</string>
    <string name="add_account">Add Account</string>
    <string name="verify">Verify</string>
    <string name="message_failed_to_send">Message failed to send</string>
    <string name="message_sent">Message sent!</string>
    <string name="send">Send</string>
    <string name="done">Done</string>
    <string name="captcha">Captcha</string>
    <string name="select_network">Select network</string>
    <string name="operator_image">Operator image</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="app_description">
        SwiftSMS helps you use your Webtexts straight from your phone or tablet in a fast and simple manner.
		It is designed to provide you easy and intuitive access to sending SMS messages using your Network Providers Webtext allowance.
		Features include:
			* Send SMS via Webtext
			* Multiple Accounts
			* Fast Account Switching
			* Simple and Quick Contact Suggestions
			
		The App is designed with the Android look and feel in mind so it fits seemlessly onto your device.
		
		We currently only support the following Netowrk Providers:
			* Vodafone
			* Three
			* Meteor
			* Tesco
		In a later releases we will add support for all other Irish providers.
	</string>
	<string name="not_implemented">O2 Sending not Implemented!</string>
	<string name="message_cancelled">Sending cancelled</string>
	<string name="operator_changed">Operator website changed</string>
	<string name="enter_verification_code">Enter verification code:</string>
	<string name="code">Code</string>
	<string name="recent_contacts">Recent contacts:</string>
	<string name="login_failed">Login failed</string>
	<string name="logged_in">Login successful</string>
	<string name="no_internet_connection">No internet connection</string>
				
</resources>
