<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.acc.AddAccountActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="@dimen/edittext_bottom_margin"
                android:text="@string/text_add_operator"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#ff16a1b5" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_acc_name_opt"
                android:id="@+id/text_acc_name"
                android:paddingTop="@dimen/edittext_top_margin"
                android:paddingBottom="@dimen/edittext_bottom_margin"
             />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_mob_number"
                android:id="@+id/text_acc_number"
                android:paddingTop="@dimen/edittext_top_margin"
                android:paddingBottom="@dimen/edittext_bottom_margin"
            />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:id="@+id/text_acc_password"
                android:paddingTop="@dimen/edittext_top_margin"
                android:paddingBottom="@dimen/edittext_bottom_margin"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_acc_network"
                />
        </LinearLayout>
    </ScrollView>

        <ImageButton
            android:id="@+id/button_add_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="addAccount"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_menu_send" />

</RelativeLayout>