<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/element_margin"
        android:paddingRight="@dimen/element_margin"
        android:paddingTop="@dimen/element_margin" >

        <AutoCompleteTextView
            android:id="@+id/text_compose_recipients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/to"
            android:inputType="textPersonName" >

            <requestFocus />
        </AutoCompleteTextView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_compose_bottom_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="@dimen/element_margin"
            android:paddingRight="@dimen/element_margin" >

            <EditText
                android:id="@+id/text_compose_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/layout_compose_bottom_right"
                android:ems="10"
                android:hint="@string/type_message"
                android:imeOptions="actionSend|flagNoEnterAction"
                android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                android:maxLines="5" />

            <LinearLayout
                android:id="@+id/layout_compose_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/label_compose_character_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|bottom"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/button_compose_send"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_marginLeft="4dip"
                    android:layout_weight="1.0"
                    android:contentDescription="@string/send"
                    android:drawablePadding="0dip"
                    android:onClick="sendMessage"
                    android:src="@drawable/send_button_selector" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/view_notification_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_compose_bottom_scrollview"
        android:paddingBottom="@dimen/element_margin_half"
        android:paddingTop="@dimen/element_margin_half"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textview_notification_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/background_light" >
        </TextView>
    </RelativeLayout>

</RelativeLayout>